# happyhouse-backend

./: .gitignore  pyproject.toml
common/: models.py  permissions.py  views.py
config/: settings.py  urls.py
curriculums/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
curriculums/api/v1/: views.py
curriculums/fixtures/: test_data.json
curriculums/migrations/: 0001_initial.py  0002_alter_curriculum_photo.py
introductions/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
introductions/api/v1/: views.py
introductions/fixtures/: test_data.json
introductions/migrations/: 0001_initial.py  0002_remove_introduction_photo.py  0003_alter_introduction_kind.py
media/: admin.py  models.py  serializers.py  urls.py  views.py
media/migrations/: 0001_initial.py
notices/: admin.py  models.py  serializers.py  tests.py  views.py
notices/api/v1/: urls.py  views.py
notices/migrations/: 0001_initial.py  0002_rename_user_comment_owner_remove_notice_owner_and_more.py
reservations/: admin.py  models.py
reservations/api/v1/: urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_alter_reservation_guests.py
teachers/: admin.py  models.py
teachers/api/v1/: views.py
teachers/migrations/: 0001_initial.py  0002_alter_teacher_photo.py
users/: admin.py  models.py
users/api/v1/: urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar_user_gender_user_is_admin_user_is_parent_and_more.py  0003_alter_user_first_name_alter_user_last_name.py
